# tgparsing-bots

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose-dev.yml  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  settings.py
.github/workflows/: actions.yml  lint.yml
app/: bots.sh  manage.py  run.sh  server.py  settings.py
app/bot/: depedencies.py  parsing.py  routes.py  schemas.py  utils.py  views.py
backend/: manage.py  routes.py  server.py  settings.py
backend/bot/: bot.py  bot_routes.py  mailing.py  parsing.py  routes.py  schemas.py  views.py
backend/bot/utils/: log_func.py
bot/: bot.py  parsing.py  routes.py  views.py
bots/: Dockerfile  manage.py  pylintrc  pyproject.toml  requirements-dev.txt  requirements.txt  routes.py  server.py  settings.py
bots/bot/: bot.py  mailing.py  parsing.py  routes.py  schemas.py  utils.py  views.py
